[package]
name = "repl-builder"
version = "0.0.0"
authors = ["Fabian Vilers <fabian.vilers@dev-one.com>"]
edition = "2021"
description = "A dead simple REPL builder package"
readme = "README.md"
repository = "https://github.com/fvilers/repl-builder"
license = "MIT"
keywords = ["repl", "repl-builder"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
question = { git = "https://github.com/fvilers/question" }
